test/library/standard/Communication/errors.getNegSize.good
errors.chpl:19: error: halt reached - Number of bytes (-10) for Communication.get is negative.
